--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "easy-pie-chart": "^2.1.7",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "http-status-codes": "^1.3.2",
     "jquery": "^3.2.1",
     "ngx-bootstrap": "^1.9.3",
     "node-sass": "^4.7.2",
