--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^5.1.2",
-    "@angular/common": "^5.1.2",
-    "@angular/compiler": "^5.1.2",
-    "@angular/core": "^5.1.2",
-    "@angular/forms": "^5.1.2",
-    "@angular/http": "^5.1.2",
-    "@angular/platform-browser": "^5.1.2",
-    "@angular/platform-browser-dynamic": "^5.1.2",
-    "@angular/platform-server": "^5.1.2",
-    "@angular/router": "^5.1.2",
+    "@angular/animations": "^6.1.10",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/platform-server": "^6.1.10",
+    "@angular/router": "^6.1.10",
+    "@fortawesome/fontawesome-free": "^5.9.0",
+    "@types/chart.js": "^2.7.55",
     "@types/googlemaps": "^3.30.7",
     "angular-bootstrap-md": "^5.0.5",
-    "angular2-grid": "^2.1.0",
+    "angular2-grid": "^3.0.0",
+    "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "easy-pie-chart": "^2.1.7",
@@ -33,20 +36,23 @@
     "hammerjs": "^2.0.8",
     "http-status-codes": "^1.3.2",
     "jquery": "^3.2.1",
+    "ng-uikit-pro-standard": "git+https://oauth2:i1Svq7FsndsGmL-QFc8K@git.mdbootstrap.com/mdb/angular/ng-uikit-pro-standard.git",
     "ngx-bootstrap": "^1.9.3",
     "node-sass": "^4.7.2",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.0.0-rc.0",
     "screenfull": "^3.3.0",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.5",
-    "@angular/compiler-cli": "^5.1.2",
-    "@angular/language-service": "^4.2.4",
+    "@angular-devkit/build-angular": "^0.10.1",
+    "@angular/cli": "^6.2.5",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.2.0",
+    "codelyzer": "^4.0.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -58,6 +64,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "2.4.2"
+    "typescript": "2.9.2"
   }
 }
