--- a/package.json
+++ b/package.json
@@ -12,21 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^6.1.10",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/platform-server": "^6.1.10",
-    "@angular/router": "^6.1.10",
+    "@agm/core": "^1.0.0-beta.4",
+    "@angular/animations": "^7.2.5",
+    "@angular/common": "^7.2.5",
+    "@angular/compiler": "^7.2.5",
+    "@angular/core": "^7.2.5",
+    "@angular/forms": "^7.2.5",
+    "@angular/http": "^7.2.5",
+    "@angular/platform-browser": "^7.2.5",
+    "@angular/platform-browser-dynamic": "^7.2.5",
+    "@angular/platform-server": "^7.2.5",
+    "@angular/router": "^7.2.5",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@types/chart.js": "^2.7.55",
     "@types/googlemaps": "^3.30.7",
-    "angular-bootstrap-md": "^5.0.5",
     "angular2-grid": "^3.0.0",
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
@@ -36,7 +35,7 @@
     "hammerjs": "^2.0.8",
     "http-status-codes": "^1.3.2",
     "jquery": "^3.2.1",
-    "ng-uikit-pro-standard": "git+https://oauth2:i1Svq7FsndsGmL-QFc8K@git.mdbootstrap.com/mdb/angular/ng-uikit-pro-standard.git",
+    "ng-uikit-pro-standard": "git+https://oauth2:9SXT_TL9a7ZNifFyNaLe@git.mdbootstrap.com/mdb/angular/ng-uikit-pro-standard.git",
     "ngx-bootstrap": "^1.9.3",
     "node-sass": "^4.7.2",
     "rxjs": "^6.5.2",
@@ -46,13 +45,13 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.1",
-    "@angular/cli": "^6.2.5",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/language-service": "^6.1.10",
+    "@angular/cli": "^7.3.0",
+    "@angular/compiler-cli": "^7.2.5",
+    "@angular/language-service": "^7.2.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.0",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -64,6 +63,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "2.9.2"
+    "typescript": "^3.1.1"
   }
 }
