--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.0.0-rc.0",
     "screenfull": "^3.3.0",
+    "socket.io-client": "^2.3.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
