Convertir app a PWA

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "^7.2.5",
     "@angular/platform-browser-dynamic": "^7.2.5",
     "@angular/platform-server": "^7.2.5",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "^7.2.5",
+    "@angular/service-worker": "^7.2.5",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@types/chart.js": "^2.7.55",
     "@types/googlemaps": "^3.30.7",
