--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/router": "^7.2.5",
     "@angular/service-worker": "^7.2.5",
     "@fortawesome/fontawesome-free": "^5.9.0",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
     "@types/chart.js": "^2.7.55",
     "@types/googlemaps": "^3.30.7",
     "angular2-grid": "^3.0.0",
