--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.4",
-    "@angular-devkit/build-angular": "^0.12.4",
-    "@angular/animations": "^7.2.5",
-    "@angular/common": "^7.2.5",
-    "@angular/compiler": "^7.2.5",
-    "@angular/core": "^7.2.5",
-    "@angular/forms": "^7.2.5",
+    "@agm/core": "^1.1.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/http": "^7.2.5",
-    "@angular/platform-browser": "^7.2.5",
-    "@angular/platform-browser-dynamic": "^7.2.5",
-    "@angular/platform-server": "^7.2.5",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
     "@angular/pwa": "^0.12.4",
-    "@angular/router": "^7.2.5",
-    "@angular/service-worker": "^7.2.5",
+    "@angular/router": "^8.2.14",
+    "@angular/service-worker": "^8.2.14",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "@types/chart.js": "^2.7.55",
     "@types/googlemaps": "^3.30.7",
-    "angular2-grid": "^3.0.0",
+    "angular2-grid": "^4.0.0",
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
@@ -42,16 +42,19 @@
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^1.9.3",
     "node-sass": "^4.13.1",
-    "rxjs": "^6.5.2",
+    "rxjs": "^6.5.5",
     "rxjs-compat": "^6.0.0-rc.0",
     "screenfull": "^3.3.0",
     "socket.io-client": "^2.3.0",
-    "zone.js": "^0.8.29"
+    "tslib": "^1.9.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "^7.3.0",
-    "@angular/compiler-cli": "^7.2.5",
-    "@angular/language-service": "^7.2.5",
+    "@angular-devkit/core": "^9.1.7",
+    "@angular-devkit/schematics": "^9.1.7",
+    "@angular/cli": "^9.1.7",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -67,6 +70,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "^3.1.1"
+    "typescript": "^3.5.3"
   }
 }
