--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular-devkit/build-angular": "~0.13.0",
     "@angular/animations": "^9.1.9",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "^9.1.9",
     "@angular/compiler": "^9.1.9",
     "@angular/core": "^9.1.9",
@@ -39,7 +39,8 @@
     "hammerjs": "^2.0.8",
     "http-status-codes": "^1.3.2",
     "jquery": "^3.4.1",
-    "ngx-bootstrap": "^1.9.3",
+    "ng-uikit-pro-standard": "git+https://oauth2:xjhk1p7a2_CcXP7kQyKh@git.mdbootstrap.com/mdb/angular/ng-uikit-pro-standard.git",
+    "ngx-bootstrap": "^5.6.1",
     "node-sass": "^4.13.1",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.0.0-rc.0",
@@ -49,6 +50,7 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular-devkit/core": "^9.1.7",
     "@angular-devkit/schematics": "^9.1.7",
     "@angular/cli": "^9.1.7",
