--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "webbar-v1.1",
-  "short_name": "webbar-v1.1",
+  "name": "Bonapp",
+  "short_name": "Bonapp",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
