--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "hammerjs": "^2.0.8",
     "http-status-codes": "^1.3.2",
     "jquery": "^3.4.1",
+    "ng-http-loader": "^8.0.0",
     "ngx-bootstrap": "^5.6.1",
     "node-sass": "^4.13.1",
     "rxjs": "^6.5.5",
