--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -7,7 +7,8 @@
     "types": []
   },
   "angularCompilerOptions": {
-    "preserveWhitespaces": false
+    "preserveWhitespaces": false,
+    "enableIvy": false
   },
   "exclude": [
     "test.ts",
